Add build-essential - required for leveldb native module compile

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@
 provision/david-www/files/ssl/david-dm.org.key
 provision/david-www/files/ssl/david-dm.org.crt
 
+provision/david-www/files/configs/development.json
+provision/david-www/files/configs/staging.json
 provision/david-www/files/configs/production.json
