Update config location

--- a/provision/david-www/handlers/main.yml
+++ b/provision/david-www/handlers/main.yml
@@ -1,7 +1,7 @@
 - name: Restart Nginx
-  sudo: yes
+  become: yes
   service:  name=nginx state=restarted
 
 - name: Restart david-www
-  sudo: yes
+  become: yes
   service:  name=david-www state=restarted
