--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ provision/david-www/files/ssl/david-dm.org.crt
 provision/david-www/files/configs/development.json
 provision/david-www/files/configs/staging.json
 provision/david-www/files/configs/production.json
+
+provision/playbook.retry
