adds letsencrypt, ufw and modularises others

--- a/provision/david-www/templates/upstart.conf
+++ b/provision/david-www/templates/upstart.conf
@@ -11,6 +11,6 @@ respawn limit 5 30
 setuid david-www
 setgid david-www
 
-chdir /home/david-www/david-www
-env NODE_ENV={{ node_env }}
+chdir /home/{{service}}/{{service}}
+env NODE_ENV={{node_env}}
 exec npm start
